app: Print 2-digit LittleCMS minor versions correctly

LittleCMS 2.12.0 defines LCMS_VERSION as 2120. We want to print that
as 2.12.0, not 2.2.0.

Resolves: https://gitlab.gnome.org/GNOME/gimp/-/issues/6505
Signed-off-by: Simon McVittie <smcv@debian.org>
(cherry picked from commit e54bfa58b1e77ae73459d6e0bd39955750d82c8d)